2007-02-11  Roger Sayle  <roger@eyesopen.com>
	    Matt Thomas  <matt@3am-software.com>

	* simplify-rtx.c (simplify_relational_operation_1): Correct typo.

2007-02-11  Roger Sayle  <roger@eyesopen.com>

	* simplify-rtx.c (simplify_relational_operation_1): Optimize
	comparisons of POPCOUNT against zero.
	(simplify_const_relational_operation): Likewise.

2007-02-11  Manuel Lopez-Ibanez  <manu@gcc.gnu.org>

	* doc/invoke.texi (Wextra): Delete outdated paragraph.
	
2007-02-11  Manuel Lopez-Ibanez  <manu@gcc.gnu.org>

	* dwarf2out.c (root_type): Delete unused function.
	
2007-02-11  Manuel Lopez-Ibanez  <manu@gcc.gnu.org>

	* genattrtab.c (contained_in_p): Delete unused function.
	(write_expr_attr_cache): Likewise.

2007-02-11  Jan Hubicka  <jh@suse.cz>

	* ipa-inline.c (cgraph_edge_badness): Add "else" missing in the
	previous patch.

2007-02-11  Steven Bosscher  <steven@gcc.gnu.org>

	* fwprop.c (try_fwprop_subst): Use set_unique_reg_note
	to add the REG_EQ* note.
	* see.c (see_merge_one_use_extension): Likewise.
	* local-alloc.c (update_equiv_regs): Likewise.  Also don't
	turn REG_EQUAL notes into REG_EQUIV notes if the target
	register may have more than one set.
	* function.c (assign_parm_setup_reg): Use set_unique_reg_note.
	* gcse.c (try_replace_reg): Likewise.
	* alias.c (init_alias_analysis): Use find_reg_equal_equiv_note.
	* calls.c (fixup_tail_calls): Likewise.  Abort if there is
	more than one REG_EQUIV note.
	* reload1.c (gen_reload): Use set_unique_reg_note.

2007-02-11  Uros Bizjak  <ubizjak@gmail.com>

	* config/i386/i386.c (TARGET_VECTORIZE_BUILTIN_CONVERSION): Define.
	(ix86_builtin_conversion): New function.

2007-02-06  Mark Mitchell  <mark@codesourcery.com>

	PR target/29487
	* tree.h (DECL_REPLACEABLE_P): New macro.
	* except.c (set_nothrow_function_flags): Likewise.

2007-02-11  Tehila Meyzels  <tehila@il.ibm.com>
	    Ira Rosen  <irar@il.ibm.com>
	    Dorit Nuzman  <dorit@il.ibm.com>
